fix(post): make post info date smaller and better align its items
items will be now align to the top right corner without margin other than bottom one to separate one
item from the other

--- a/scss/widgets/post.scss
+++ b/scss/widgets/post.scss
@@ -11,11 +11,20 @@
   }
 
   .post-infos {
-    align-items: flex-start;
+    align-items: flex-end;
     flex-direction: column;
     position: absolute;
     right: 0;
     top: 0;
+
+    > * {
+      margin-right: 0;
+      margin-bottom: 0.25rem;
+    }
+
+    .post-date {
+      font-size: 0.75rem;
+    }
   }
 
   .regular.contents {
